Fix small layout issue

--- a/landing_page/stylesheet.css
+++ b/landing_page/stylesheet.css
@@ -41,10 +41,10 @@ h1 {
 	margin-bottom: 8px;
 	font-weight: 900;
 	transform: scale(1.37, 1.6);
-  -webkit-transform: scale(, 1.3); /* Safari and Chrome */
-  -moz-transform: scale(1, 1.5); /* Firefox */
-  -ms-transform: scale(1, 1.5); /* IE 9+ */
-  -o-transform: scale(1, 1.5); /* Opera */
+  -webkit-transform: scale(1.37, 1.6); /* Safari and Chrome */
+  -moz-transform: scale(1.37, 1.6); /* Firefox */
+  -ms-transform: scale(1.37, 1.6); /* IE 9+ */
+  -o-transform: scale(1.37, 1.6); /* Opera */
 }
 
 #header h1:nth-of-type(3) {
@@ -66,8 +66,8 @@ h1 {
 
 .project-text {
 	margin-bottom: 24px;
-	padding-left: 22px;
-	padding-right: 22px;
+	padding-left: 26px;
+	padding-right: 26px;
 }
 
 #projects {
